<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.reporter.Phase3Activity$PlaceholderFragment" >

    <CheckBox
        android:id="@+id/checkBoxProtection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkBoxEvacuation"
        android:text="@string/protection" />

    <CheckBox
        android:id="@+id/checkBoxWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkBoxFood"
        android:text="@string/water" />

    <CheckBox
        android:id="@+id/checkBoxRepair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkBoxSanitation"
        android:layout_toLeftOf="@+id/checkBoxFood"
        android:text="@string/repair_lifelines" />

    <TextView
        android:id="@+id/textViewPossibleNeeds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/possible_needs"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/checkBoxSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxProtection"
        android:layout_below="@+id/textViewPossibleNeeds"
        android:text="@string/search_rescue" />

    <CheckBox
        android:id="@+id/checkBoxEvacuation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBoxSearch"
        android:layout_alignBottom="@+id/checkBoxSearch"
        android:layout_alignRight="@+id/checkBoxProtection"
        android:text="@string/evacuation" />

    <CheckBox
        android:id="@+id/checkBoxMedicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBoxProtection"
        android:layout_alignBottom="@+id/checkBoxProtection"
        android:layout_alignLeft="@+id/checkBoxEvacuation"
        android:layout_alignRight="@+id/checkBoxProtection"
        android:text="@string/medicine_health" />

    <CheckBox
        android:id="@+id/checkBoxShelter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxMedicine"
        android:layout_marginTop="19dp"
        android:layout_toLeftOf="@+id/checkBoxMedicine"
        android:text="@string/shelter_clothing" />

    <CheckBox
        android:id="@+id/checkBoxFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/checkBoxShelter"
        android:layout_toRightOf="@+id/checkBoxShelter"
        android:text="@string/food" />

    <CheckBox
        android:id="@+id/checkBoxSanitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBoxWater"
        android:layout_alignBottom="@+id/checkBoxWater"
        android:layout_alignLeft="@+id/checkBoxFood"
        android:layout_alignRight="@+id/checkBoxWater"
        android:text="@string/sanitation" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxRepair"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="14dp"
        android:onClick="onClick"
        android:text="@string/submit" />

</RelativeLayout>
